--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "form-data": "^2.3.3",
     "koa": "^2.6.2",
     "node-fetch": "^2.3.0"
   }
