--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "dotenv": "^6.1.0",
     "form-data": "^2.3.3",
     "gm": "^1.23.1",
     "koa": "^2.6.2",
